# auto-cillision-2d

./: .gitignore  DEVELOPMENT.md  GIT_SUMMARY.md  README.md  TEST_RESULTS.md  demo.py  pyproject.toml  quick_start.sh  requirements.txt  test_env.py
.github/: copilot-instructions.md
assets/examples/: 1.json
assets/examples/output/json/: star.json
example/: base.json
geometry/: __init__.py
scripts/: activate.sh  quick_start.sh
src/: __init__.py  cli.py  collision_mapper.py  polygon_simplifier.py  preview_generator.py
src/core/: __init__.py  collision_mapper.py  image_processor.py  polygon_simplifier.py  preview_generator.py  triangulator.py
src/geometry/: __init__.py  vector2d.py
src/utils/: __init__.py  json_writer.py
tests/: __init__.py  test_environment.py  test_polygon_simplifier.py  test_vector2d.py
utils/: __init__.py  json_writer.py
